--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -78,10 +78,16 @@
         border-left: 5px solid green;
     }
 
-    
     .panel-body{
         background-color: #BEDCF2;
         }
+
+    .glyphicon.glyphicon-plus-sign {
+        font-size: 20px;
+    }
+    .glyphicon.glyphicon-remove-circle{
+        font-size: 18px;
+    }
 
 
     
