--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -6,12 +6,12 @@
     </div>
     <div class="row">
         <div class="col-3 sidenav" style="background-color: #BEDCF2">
-            <h5>CONTRACT
+            <h5 class="text-center">CONTRACT
                 <br> PROVIDER</h5>
             <hr/>
             <table class="table-borderless">
                 <tr>
-                    <td>
+                    <td class="text-center">
                         <a (click)="scrollTo('demographicsPanel')" style="cursor: pointer" id="demoLink">
                             <h6 class="text"> DEMOGRAPHICS
                             </h6>
@@ -25,7 +25,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td class="text-center">
                         <a (click)="scrollTo('cpPanel')" style="cursor: pointer">
                             <h6 class="text"> CONT. PARTNER
                             </h6>
@@ -39,7 +39,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td class="text-center">
                         <a (click)="scrollTo('licencePanel')" style="cursor: pointer">
                             <h6 class="text">LICENSING
                             </h6>
@@ -52,7 +52,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td class="text-center">
                         <a (click)="scrollTo('locationPanel')" style="cursor: pointer">
                             <h6 class="text">LOCATIONS
                             </h6>
@@ -65,7 +65,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td class="text-center">
                         <a (click)="scrollTo('commentsPanel')" style="cursor: pointer">
                             <h6 class="text">COMMENTS</h6>
                         </a>
@@ -86,6 +86,7 @@
 
 
             <hr/>
+            <br><br><br>
             <!-- <button class="btn btn-outline-rounded btn-default" style="border-radius: 12px;">
                 <span class="glyphicon glyphicon-chevron-left"></span> Back</button> -->
         </div>
@@ -195,7 +196,7 @@
                                                         <div class="col-2" style="padding-left: 0px;">
                                                             <span *ngIf="i > 0">
                                                                 <button type="button" class="btn btn-danger btn-sm" style="border-radius:100%" (click)="removeContractedPartner(i)">
-                                                                    <span class="glyphicon glyphicon-remove-circle" ></span>
+                                                                    <span class="glyphicon glyphicon-remove-circle"  ></span>
                                                                 </button>
                                                             </span>
                                                         </div>
@@ -206,8 +207,8 @@
                                             </div>
                                         </div>
                                         <div class="form-row">
-                                            <button type="button" class="btn btn-default" style="border-radius:100%" (click)="addContractedPartner()">
-                                                <span class="glyphicon glyphicon-plus-sign"></span>
+                                            <button type="button" class="btn btn-default btn-sm" style="border-radius:100%" (click)="addContractedPartner()">
+                                                <span class="glyphicon glyphicon-plus-sign" style="padding-top: 5px"></span>
                                             </button>
                                         </div>
                                     </div>
@@ -444,8 +445,8 @@
 
                                                                     </div>
                                                                     <div class="form-row" style="padding-top: 10px">
-                                                                        <button type="button" class="btn btn-default" style="border-radius:100%" (click)="addOfficeHour(i)">
-                                                                            <span class="glyphicon glyphicon-plus-sign"></span>
+                                                                        <button type="button" class="btn btn-default btn-sm" style="border-radius:100%" (click)="addOfficeHour(i)">
+                                                                            <span class="glyphicon glyphicon-plus-sign" style="padding-top: 5px"></span>
                                                                         </button>
                                                                     </div>
 
@@ -487,7 +488,7 @@
                                             <div class="row">
                                                 <div class="col-2">
                                                     <button type="button" class="btn btn-default btn-sm" style="border-radius: 25px" (click)="addLocation()">
-                                                        <span class="glyphicon glyphicon-plus-sign"></span>
+                                                        <span class="glyphicon glyphicon-plus-sign" style="padding-top: 5px"></span>
                                                         <span style="font-size: 15px">New Location</span>
                                                     </button>
                                                 </div>
